--- a/inventory.ini
+++ b/inventory.ini
@@ -3,6 +3,5 @@
 
 [all:vars]
 ansible_user=ubuntu
-ansible_ssh_private_key_file=/mnt/c/Users/MY\LAPTOP/Downloads/azure_vm_key.pem
-ansible_ssh_common_args='-o StrictHostKeyChecking=no'
-
+ansible_ssh_private_key_file=~/.ssh/azure_vm_key
+ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
