--- a/inventory.ini
+++ b/inventory.ini
@@ -2,6 +2,6 @@
 68.218.105.188
 
 [all:vars]
-ansible_user=ubuntu
+ansible_user=azureuser
 ansible_ssh_private_key_file=~/.ssh/azure_vm_key
 ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
