--- a/roles/common/task/main.yml
+++ b/roles/common/task/main.yml
@@ -1,10 +1,12 @@
 ---
 - name: Update and upgrade packages
+  become: yes
   apt:
     update_cache: yes
     upgrade: yes
 
 - name: Install common packages
+  become: yes
   apt:
     name:
       - nginx
@@ -15,6 +17,7 @@
     state: present
 
 - name: Install Node.js 18
+  become: yes
   shell: |
     curl -fsSL https://deb.nodesource.com/setup_18.x | bash -
     apt-get install -y nodejs
