--- a/roles/common/task/main.yml
+++ b/roles/common/task/main.yml
@@ -23,13 +23,15 @@
   args:
     executable: /bin/bash
 
-- name: Install Node.js 18
+- name: Install Node.js and npm
   apt:
-    name: nodejs
+    name:
+      - nodejs
+      - npm
     state: present
     update_cache: yes
 
-- name: Verify Node.js and npm installation
+- name: Verify Node.js installation
   command: node -v
   register: node_version
   changed_when: false
