--- a/roles/epicbook/tasks/main.yml
+++ b/roles/epicbook/tasks/main.yml
@@ -1,4 +1,21 @@
 ---
+# ======================
+# 1. Install Node.js + npm
+# ======================
+- name: Add NodeSource 18.x repository
+  shell: curl -fsSL https://deb.nodesource.com/setup_18.x | bash -
+  args:
+    warn: false
+
+- name: Install Node.js
+  apt:
+    name: nodejs
+    state: present
+    update_cache: yes
+
+# ======================
+# 2. Prepare Application Directory
+# ======================
 - name: Remove old EpicBook directory
   file:
     path: "{{ app_dir }}"
@@ -10,86 +27,41 @@
     dest: "{{ app_dir }}"
     version: main
 
+# ======================
+# 3. Install Dependencies
+# ======================
 - name: Install Node.js dependencies
   npm:
     path: "{{ app_dir }}"
     production: yes
 
-- name: Create environment file
-  copy:
-    dest: "{{ app_dir }}/.env"
-    content: |
-      DB_HOST={{ db_host }}
-      DB_USER={{ db_username }}
-      DB_PASSWORD={{ db_password }}
-      DB_NAME={{ db_name }}
-      DB_PORT=3306
-      NODE_ENV=production
-      PORT=8080
-  notify: Restart EpicBook Service
-
-- name: Update config.json with all environments
-  copy:
-    dest: "{{ app_dir }}/config/config.json"
-    content: |
-      {
-        "development": {
-          "username": "{{ db_username }}",
-          "password": "{{ db_password }}",
-          "database": "{{ db_name }}",
-          "host": "{{ db_host }}",
-          "dialect": "mysql"
-        },
-        "test": {
-          "username": "{{ db_username }}",
-          "password": "{{ db_password }}",
-          "database": "{{ db_name }}",
-          "host": "{{ db_host }}",
-          "dialect": "mysql"
-        },
-        "production": {
-          "username": "{{ db_username }}",
-          "password": "{{ db_password }}",
-          "database": "{{ db_name }}",
-          "host": "{{ db_host }}",
-          "dialect": "mysql"
-        }
-      }
-  notify: Restart EpicBook Service
-
-- name: Seed database
-  shell: |
-    mysql -h {{ db_host }} -u {{ db_username }} -p{{ db_password }} < db/BuyTheBook_Schema.sql
-    mysql -h {{ db_host }} -u {{ db_username }} -p{{ db_password }} < db/author_seed.sql
-    mysql -h {{ db_host }} -u {{ db_username }} -p{{ db_password }} < db/books_seed.sql
+# ======================
+# 4. Build the Application
+# ======================
+- name: Build the React application
+  shell: npm run build
   args:
     chdir: "{{ app_dir }}"
-  ignore_errors: yes
 
-- name: Create systemd service for EpicBook
+# ======================
+# 5. Set Up Nginx
+# ======================
+- name: Install Nginx
+  apt:
+    name: nginx
+    state: present
+    update_cache: yes
+
+- name: Copy build files to nginx directory
   copy:
-    dest: /etc/systemd/system/epicbook.service
-    content: |
-      [Unit]
-      Description=EpicBook Backend Service
-      After=network.target
+    src: "{{ app_dir }}/build/"
+    dest: /var/www/html/
+    owner: www-data
+    group: www-data
+    mode: '0755'
+    remote_src: yes
 
-      [Service]
-      Type=simple
-      User=root
-      WorkingDirectory={{ app_dir }}
-      ExecStart=/usr/bin/node server.js
-      Restart=on-failure
-      Environment=NODE_ENV=production
-      EnvironmentFile={{ app_dir }}/.env
-
-      [Install]
-      WantedBy=multi-user.target
-  notify: Restart EpicBook Service
-
-- name: Enable and start EpicBook service
-  systemd:
-    name: epicbook
-    enabled: yes
-    state: started
-    daemon_reload: yes
+- name: Restart nginx
+  service:
+    name: nginx
+    state: restarted
