--- a/roles/epicbook/tasks/main.yml
+++ b/roles/epicbook/tasks/main.yml
@@ -1,112 +1,92 @@
- # ----------------------------
-    # Application setup
-    # ----------------------------
-    - name: Remove old EpicBook directory
-      file:
-        path: "{{ app_dir }}"
-        state: absent
+# ----------------------------
+# Application setup
+# ----------------------------
+- name: Remove old EpicBook directory
+  file:
+    path: "{{ app_dir }}"
+    state: absent
 
-    - name: Clone EpicBook repo
-      git:
-        repo: "{{ epicbook_repo }}"
-        dest: "{{ app_dir }}"
-        version: main
+- name: Clone EpicBook repo
+  git:
+    repo: "{{ epicbook_repo }}"
+    dest: "{{ app_dir }}"
+    version: main
 
-    - name: Install Node.js dependencies
-      npm:
-        path: "{{ app_dir }}"
-        production: yes
+# ----------------------------
+# Node.js Installation
+# ----------------------------
+- name: Install prereqs for NodeSource
+  apt:
+    name:
+      - curl
+      - apt-transport-https
+      - ca-certificates
+    state: present
+    update_cache: yes
 
-    - name: Create environment file
-      copy:
-        dest: "{{ app_dir }}/.env"
-        content: |
-          DB_HOST={{ db_host }}
-          DB_USER={{ db_username }}
-          DB_PASSWORD={{ db_password }}
-          DB_NAME={{ db_name }}
-          DB_PORT=3306
-          NODE_ENV=production
-          PORT=8080
-      notify: Restart EpicBook Service
+- name: Add NodeSource 18.x repo
+  shell: curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
+  args:
+    warn: false
 
-    - name: Update config.json with all environments
-      copy:
-        dest: "{{ app_dir }}/config/config.json"
-        content: |
-          {
-            "development": {
-              "username": "{{ db_username }}",
-              "password": "{{ db_password }}",
-              "database": "{{ db_name }}",
-              "host": "{{ db_host }}",
-              "dialect": "mysql"
-            },
-            "test": {
-              "username": "{{ db_username }}",
-              "password": "{{ db_password }}",
-              "database": "{{ db_name }}",
-              "host": "{{ db_host }}",
-              "dialect": "mysql"
-            },
-            "production": {
-              "username": "{{ db_username }}",
-              "password": "{{ db_password }}",
-              "database": "{{ db_name }}",
-              "host": "{{ db_host }}",
-              "dialect": "mysql"
-            }
-          }
-      notify: Restart EpicBook Service
+- name: Install Node.js and npm
+  apt:
+    name: nodejs
+    state: present
+    update_cache: yes
 
-    # ----------------------------
-    # Database setup
-    # ----------------------------
-    - name: Ensure MySQL database exists
-      mysql_db:
-        name: "{{ db_name }}"
-        state: present
-        login_host: "{{ db_host }}"
-        login_user: "{{ db_username }}"
-        login_password: "{{ db_password }}"
-        ssl_mode: REQUIRED
+- name: Verify npm installed
+  shell: which npm
+  register: npm_path
+  changed_when: false
 
-    - name: Seed database
-      shell: |
-        mysql -h {{ db_host }} -u {{ db_username }} -p{{ db_password }} --ssl-mode=REQUIRED {{ db_name }} < db/BuyTheBook_Schema.sql
-        mysql -h {{ db_host }} -u {{ db_username }} -p{{ db_password }} --ssl-mode=REQUIRED {{ db_name }} < db/author_seed.sql
-        mysql -h {{ db_host }} -u {{ db_username }} -p{{ db_password }} --ssl-mode=REQUIRED {{ db_name }} < db/books_seed.sql
-      args:
-        chdir: "{{ app_dir }}"
-      ignore_errors: yes
+- debug:
+    msg: "NPM path: {{ npm_path.stdout }}"
 
-    # ----------------------------
-    # Systemd service for EpicBook
-    # ----------------------------
-    - name: Create systemd service for EpicBook
-      copy:
-        dest: /etc/systemd/system/epicbook.service
-        content: |
-          [Unit]
-          Description=EpicBook Backend Service
-          After=network.target
+# ----------------------------
+# Install Node.js dependencies
+# ----------------------------
+- name: Install Node.js dependencies
+  npm:
+    path: "{{ app_dir }}"
+    production: yes
 
-          [Service]
-          Type=simple
-          User=root
-          WorkingDirectory={{ app_dir }}
-          ExecStart=/usr/bin/node server.js
-          Restart=on-failure
-          Environment=NODE_ENV=production
-          EnvironmentFile={{ app_dir }}/.env
+# ----------------------------
+# Environment setup
+# ----------------------------
+- name: Create environment file
+  copy:
+    dest: "{{ app_dir }}/.env"
+    content: |
+      DB_HOST={{ db_host }}
+      DB_USER={{ db_username }}
+      DB_PASSWORD={{ db_password }}
+      DB_NAME={{ db_name }}
+      DB_PORT=3306
+      NODE_ENV=production
+      PORT=8080
+  notify: Restart EpicBook Service
 
-          [Install]
-          WantedBy=multi-user.target
-      notify: Restart EpicBook Service
-
-    - name: Enable and start EpicBook service
-      systemd:
-        name: epicbook
-        enabled: yes
-        state: started
-        daemon_reload: yes
+- name: Update config.json with all environments
+  copy:
+    dest: "{{ app_dir }}/config/config.json"
+    content: |
+      {
+        "development": {
+          "username": "{{ db_username }}",
+          "password": "{{ db_password }}",
+          "database": "{{ db_name }}",
+          "host": "{{ db_host }}",
+          "dialect": "mysql"
+        },
+        "test": {
+          "username": "{{ db_username }}",
+          "password": "{{ db_password }}",
+          "database": "{{ db_name }}",
+          "host": "{{ db_host }}",
+          "dialect": "mysql"
+        },
+        "production": {
+          "username": "{{ db_username }}",
+          "password": "{{ db_password }}",
+          "database": "{{ db_name }}",
