--- a/inventory.ini
+++ b/inventory.ini
@@ -5,3 +5,4 @@
 ansible_user=azureuser
 ansible_ssh_private_key_file=~/.ssh/azure_vm_key
 ansible_ssh_common_args='-o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null'
+ansible_python_interpreter=/usr/bin/python3
